--- a/app/src/main/res/layout/activity_user.xml
+++ b/app/src/main/res/layout/activity_user.xml
@@ -66,26 +66,6 @@
         android:layout_alignLeft="@+id/searchMeetupButton"
         android:layout_alignStart="@+id/searchMeetupButton" />
 
-    <TextView
-        android:text="@string/locationPlaceholder"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/locationTextView"
-        android:layout_marginTop="20dp"
-        android:layout_below="@+id/profileImageView"
-        android:layout_centerHorizontal="true" />
-
-    <TextView
-        android:text="@string/userPlaceholder"
-        android:textSize="24sp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAlignment="center"
-        android:layout_marginTop="74dp"
-        android:id="@+id/userTextView"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true" />
-
     <ImageView
         android:layout_width="120dp"
         android:layout_height="120dp"
@@ -118,5 +98,53 @@
         android:layout_alignLeft="@+id/zipEditText"
         android:layout_alignStart="@+id/zipEditText" />
 
+    <TextView
+        android:text="@string/userPlaceholder"
+        android:textSize="24sp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAlignment="center"
+        android:layout_marginTop="21dp"
+        android:id="@+id/userTextView"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true" />
+
+    <TextView
+        android:text="@string/locationPlaceholder"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/locationTextView"
+        android:layout_marginTop="11dp"
+        android:layout_below="@+id/profileImageView"
+        android:layout_centerHorizontal="true" />
+
+    <TextView
+        android:text="@string/no_repos"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:id="@+id/reposTextView"
+        android:layout_below="@+id/bioTextView"
+        android:layout_alignLeft="@+id/bioTextView"
+        android:layout_alignStart="@+id/bioTextView" />
+
+    <TextView
+        android:text="@string/no_bio"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/bioTextView"
+        android:layout_marginTop="14dp"
+        android:layout_below="@+id/locationTextView"
+        android:layout_alignLeft="@+id/locationTextView"
+        android:layout_alignStart="@+id/locationTextView" />
+
+    <TextView
+        android:text="@string/no_followers"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/followersTextView"
+        android:layout_centerVertical="true"
+        android:layout_alignLeft="@+id/reposTextView"
+        android:layout_alignStart="@+id/reposTextView" />
 
 </RelativeLayout>
