--- a/app/src/main/res/layout/activity_user.xml
+++ b/app/src/main/res/layout/activity_user.xml
@@ -70,6 +70,7 @@
         android:layout_width="120dp"
         android:layout_height="120dp"
         app:srcCompat="@drawable/dummyprofile"
+        android:gravity="center_horizontal"
         android:contentDescription="@string/profileImage"
         android:id="@+id/profileImageView"
         android:layout_marginTop="22dp"
@@ -104,6 +105,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAlignment="center"
+        android:gravity="center_horizontal"
         android:layout_marginTop="21dp"
         android:id="@+id/userTextView"
         android:layout_alignParentTop="true"
@@ -115,6 +117,7 @@
         android:layout_height="wrap_content"
         android:id="@+id/locationTextView"
         android:layout_marginTop="11dp"
+        android:gravity="center_horizontal"
         android:layout_below="@+id/profileImageView"
         android:layout_centerHorizontal="true" />
 
@@ -122,29 +125,34 @@
         android:text="@string/no_repos"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="10dp"
         android:id="@+id/reposTextView"
+        android:gravity="center_horizontal"
         android:layout_below="@+id/bioTextView"
-        android:layout_alignLeft="@+id/bioTextView"
-        android:layout_alignStart="@+id/bioTextView" />
+        android:layout_centerHorizontal="true"/>
 
     <TextView
         android:text="@string/no_bio"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/bioTextView"
-        android:layout_marginTop="14dp"
+        android:layout_marginTop="15dp"
+        android:textSize="15sp"
+        android:layout_marginLeft="35dp"
+        android:layout_marginRight="35dp"
+        android:gravity="center_horizontal"
         android:layout_below="@+id/locationTextView"
-        android:layout_alignLeft="@+id/locationTextView"
-        android:layout_alignStart="@+id/locationTextView" />
+        android:layout_centerHorizontal="true"/>
 
     <TextView
         android:text="@string/no_followers"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/followersTextView"
+        android:gravity="center_horizontal"
+        android:layout_marginTop="10dp"
         android:layout_centerVertical="true"
-        android:layout_alignLeft="@+id/reposTextView"
-        android:layout_alignStart="@+id/reposTextView" />
+        android:layout_centerHorizontal="true"
+        android:layout_below="@+id/reposTextView"/>
 
 </RelativeLayout>
