--- a/app/src/main/res/layout/activity_user.xml
+++ b/app/src/main/res/layout/activity_user.xml
@@ -155,4 +155,44 @@
         android:layout_centerHorizontal="true"
         android:layout_below="@+id/reposTextView"/>
 
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="#aa000000"
+        android:elevation="2dp"
+        android:textSize="24sp"
+        android:padding="40dp"
+        android:text="@string/overlay_text"
+        android:textColor="#fff"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:id="@+id/overLayTextView" />
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/ic_search_white_24dp"
+        android:elevation="3dp"
+        android:id="@+id/overlaySearchImageView"
+        android:contentDescription="@string/search_icon"
+        android:layout_marginTop="28dp"
+        android:layout_alignTop="@+id/profileImageView"
+        android:layout_toLeftOf="@+id/userTextView"
+        android:layout_toStartOf="@+id/userTextView"
+        android:layout_marginRight="6dp"
+        android:layout_marginEnd="6dp" />
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/ic_more_vert_white_24dp"
+        android:elevation="3dp"
+        android:id="@+id/overlayMoreImageView"
+        android:contentDescription="@string/more_icon"
+        android:layout_above="@+id/overlaySearchImageView"
+        android:layout_alignLeft="@+id/overlaySearchImageView"
+        android:layout_alignStart="@+id/overlaySearchImageView"
+        android:layout_marginBottom="6dp" />
+
 </RelativeLayout>
