--- a/app/src/main/res/layout/activity_user.xml
+++ b/app/src/main/res/layout/activity_user.xml
@@ -7,64 +7,18 @@
     android:layout_height="match_parent"
     tools:context="com.mehequanna.gitawesome.ui.UserActivity">
 
-    <EditText
-        android:id="@+id/zipEditText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="@color/colorSecondaryDarkBackground"
-        android:textColorHint="@color/colorIcons"
-        android:padding="10dp"
-        android:inputType="number"
-        android:hint="@string/searchZip"
-        android:textAlignment="center"
-        android:layout_marginLeft="25dp"
-        android:layout_marginStart="25dp"
-        android:layout_alignBaseline="@+id/languageEditText"
-        android:layout_alignBottom="@+id/languageEditText"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
-
-    <EditText
-        android:id="@+id/languageEditText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:inputType="text"
-        android:hint="@string/searchLanguage"
-        android:background="@color/colorDarkBackground"
-        android:textColorHint="@color/colorIcons"
-        android:padding="10dp"
-        android:textAlignment="center"
-        android:layout_marginRight="14dp"
-        android:layout_marginEnd="14dp"
-        android:layout_marginBottom="11dp"
-        android:layout_above="@+id/searchGitButton"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
-
     <Button
         android:id="@+id/savedGithubButton"
         android:text="@string/saved_gits"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:layout_marginBottom="15dp"
-        android:layout_marginTop="15dp"
-        android:layout_alignLeft="@+id/searchGitButton"
-        android:layout_alignStart="@+id/searchGitButton"
-        android:layout_alignRight="@+id/searchGitButton"
-        android:layout_alignEnd="@+id/searchGitButton" />
-
-    <Button
-        android:text="@string/saved_meetups"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/savedMeetupsButton"
-        android:layout_alignParentBottom="true"
-        android:layout_marginBottom="15dp"
-        android:layout_alignRight="@+id/searchMeetupButton"
-        android:layout_alignEnd="@+id/searchMeetupButton"
-        android:layout_alignLeft="@+id/searchMeetupButton"
-        android:layout_alignStart="@+id/searchMeetupButton" />
+        android:layout_marginBottom="10dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginStart="14dp"
+        android:layout_marginLeft="14dp"
+        android:layout_marginRight="14dp"
+        android:layout_marginEnd="14dp" />
 
     <ImageView
         android:layout_width="140dp"
@@ -76,28 +30,6 @@
         android:layout_marginTop="22dp"
         android:layout_below="@+id/userTextView"
         android:layout_centerHorizontal="true" />
-
-    <Button
-        android:id="@+id/searchGitButton"
-        android:text="@string/searchGitButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/savedGithubButton"
-        android:layout_toRightOf="@+id/locationTextView"
-        android:layout_toEndOf="@+id/locationTextView"
-        android:layout_marginLeft="7dp"
-        android:layout_marginStart="7dp"
-        android:layout_marginTop="15dp"/>
-
-    <Button
-        android:text="@string/searchMeetupButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/searchMeetupButton"
-        android:layout_alignBaseline="@+id/searchGitButton"
-        android:layout_alignBottom="@+id/searchGitButton"
-        android:layout_alignLeft="@+id/zipEditText"
-        android:layout_alignStart="@+id/zipEditText" />
 
     <TextView
         android:text="@string/userPlaceholder"
@@ -154,6 +86,37 @@
         android:layout_centerVertical="true"
         android:layout_centerHorizontal="true"
         android:layout_below="@+id/reposTextView"/>
+
+    <EditText
+        android:id="@+id/languageEditText"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:inputType="text"
+        android:hint="@string/searchLanguage"
+        android:background="@color/colorDarkBackground"
+        android:textColorHint="@color/colorIcons"
+        android:padding="10dp"
+        android:layout_marginStart="14dp"
+        android:layout_marginLeft="14dp"
+        android:layout_marginRight="14dp"
+        android:layout_marginEnd="14dp"
+        android:textAlignment="center"
+        android:layout_marginBottom="11dp"
+        android:layout_above="@+id/searchGitButton"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true" />
+
+    <Button
+        android:id="@+id/searchGitButton"
+        android:text="@string/searchGitButton"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="14dp"
+        android:layout_marginLeft="14dp"
+        android:layout_marginRight="14dp"
+        android:layout_marginEnd="14dp"
+        android:layout_alignBottom="@+id/savedGithubButton"
+        android:layout_marginBottom="50dp" />
 
     <TextView
         android:layout_width="match_parent"
@@ -242,19 +205,6 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/overlay_profile_image"
-        android:textColor="#fff"
-        android:elevation="2dp"
-        android:textSize="24sp"
-        android:id="@+id/overlayPictureTextView"
-        android:layout_marginBottom="12dp"
-        android:layout_above="@+id/bioTextView"
-        android:layout_alignLeft="@+id/zipEditText"
-        android:layout_alignStart="@+id/zipEditText" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
         android:text="@string/overlay_3_dots"
         android:textColor="#fff"
         android:elevation="2dp"
@@ -263,5 +213,18 @@
         android:layout_alignTop="@+id/overlayMoreImageView"
         android:layout_alignLeft="@+id/overlaySearchTextView"
         android:layout_alignStart="@+id/overlaySearchTextView" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/overlay_profile_image"
+        android:textColor="#fff"
+        android:elevation="2dp"
+        android:textSize="24sp"
+        android:id="@+id/overlayPictureTextView"
+        android:layout_marginBottom="12dp"
+        android:layout_above="@+id/bioTextView"
+        android:layout_alignLeft="@+id/overlayCheckbox"
+        android:layout_alignStart="@+id/overlayCheckbox" />
 
 </RelativeLayout>
