--- a/app/src/main/res/layout/activity_landing.xml
+++ b/app/src/main/res/layout/activity_landing.xml
@@ -30,26 +30,10 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
 
-    <EditText
-        android:id="@+id/zipEditText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="@color/colorSecondaryDarkBackground"
-        android:textColorHint="@color/colorIcons"
-        android:padding="10dp"
-        android:inputType="number"
-        android:hint="@string/searchZip"
-        android:textAlignment="center"
-        android:layout_marginLeft="25dp"
-        android:layout_marginStart="25dp"
-        android:layout_alignBaseline="@+id/languageEditText"
-        android:layout_alignBottom="@+id/languageEditText"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
 
     <EditText
         android:id="@+id/languageEditText"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:inputType="text"
         android:hint="@string/searchLanguage"
@@ -59,6 +43,8 @@
         android:textAlignment="center"
         android:layout_marginRight="14dp"
         android:layout_marginEnd="14dp"
+        android:layout_marginLeft="14dp"
+        android:layout_marginStart="14dp"
         android:layout_marginBottom="11dp"
         android:layout_above="@+id/searchGitButton"
         android:layout_alignParentRight="true"
@@ -67,44 +53,31 @@
     <Button
         android:id="@+id/searchGitButton"
         android:text="@string/searchGitButton"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_above="@+id/loginButton"
-        android:layout_alignRight="@+id/languageEditText"
-        android:layout_alignEnd="@+id/languageEditText"
-        android:layout_marginRight="48dp"
-        android:layout_marginEnd="48dp" />
+        android:layout_marginStart="14dp"
+        android:layout_marginLeft="14dp"
+        android:layout_marginRight="14dp"
+        android:layout_marginEnd="14dp" />
+
+    <Button
+        android:text="@string/aboutButton"
+        android:layout_width="150dp"
+        android:layout_height="wrap_content"
+        android:id="@+id/aboutButton"
+        android:layout_alignParentBottom="true"
+        android:layout_alignLeft="@+id/searchGitButton"
+        android:layout_alignStart="@+id/searchGitButton" />
 
     <Button
         android:id="@+id/loginButton"
         android:text="@string/loginButton"
-        android:layout_width="wrap_content"
+        android:layout_width="150dp"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:layout_alignLeft="@+id/searchGitButton"
-        android:layout_alignStart="@+id/searchGitButton"
         android:layout_alignRight="@+id/searchGitButton"
         android:layout_alignEnd="@+id/searchGitButton" />
-
-    <Button
-        android:text="@string/searchMeetupButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/searchMeetupButton"
-        android:layout_below="@+id/languageEditText"
-        android:layout_alignLeft="@+id/zipEditText"
-        android:layout_alignStart="@+id/zipEditText" />
-
-    <Button
-        android:text="@string/aboutButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/aboutButton"
-        android:layout_alignParentBottom="true"
-        android:layout_alignRight="@+id/zipEditText"
-        android:layout_alignEnd="@+id/zipEditText"
-        android:layout_marginRight="20dp"
-        android:layout_marginEnd="20dp" />
 
 
 </RelativeLayout>
